--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 .tmp_*~
 .DS_Store
+.project
 /js/jquery.validationEngine.log.txt
 /js/jquery.validationEngine.js.min.js.log.txt
 /js/jquery.validationEngine-en.log.txt
